Bug 500384 - Closing System monitor logs error messages to the journal: Helper process terminated abnormally: "The process doesn't have permission to open the capture source"
Summary: Closing System monitor logs error messages to the journal: Helper process ter...
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.3.1
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-19 08:45 UTC by hbr
Modified: 2025-03-13 23:10 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments
System Monitor config files (2.25 KB, application/zip)
2025-02-19 08:45 UTC, hbr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description hbr 2025-02-19 08:45:45 UTC
Created attachment 178573 [details]
System Monitor config files

SUMMARY

As per https://bugs.kde.org/show_bug.cgi?id=500235 I was asked to create one bug report per related error message.

plasma-systemmonitor[30600]: QProcess: Destroyed while process ("/usr/lib/ksysguard/ksgrd_network_helper") is still running.

plasma-systemmonitor[30600]: org.kde.ksysguard.plugin.network: Helper process terminated abnormally: ""

STEPS TO REPRODUCE
1. Open / close System Monitor
2. Check the journal

OBSERVED RESULT
The above error messages appear in the journal.

EXPECTED RESULT
No error happens / error messages get logged.

SOFTWARE/OS VERSIONS
Operating System: EndeavourOS 
KDE Plasma Version: 6.3.1
KDE Frameworks Version: 6.11.0
Qt Version: 6.8.2
Kernel Version: 6.13.2-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7800X3D 8-Core Processor
Memory: 30,9 GiB of RAM
Graphics Processor: AMD Radeon RX 7900 XTX
Manufacturer: ASRock
Product Name: X670E Steel Legend
Comment 1 Nate Graham 2025-02-19 20:26:00 UTC
I see a slightly more detailed message on my system while checking this out:

org.kde.ksysguard.plugin.network: Helper process terminated abnormally: "The process doesn't have permission to open the capture source"
Comment 2 Bug Janitor Service 2025-02-20 10:55:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libksysguard/-/merge_requests/397
Comment 3 Arjen Hiemstra 2025-03-12 16:01:45 UTC
Git commit 35fa15a5cf618776764e786242a67d73b8e3b33b by Arjen Hiemstra.
Committed on 12/03/2025 at 15:55.
Pushed by ahiemstra into branch 'master'.

processcore: Ensure we properly terminate the network helper process on quit

Otherwise we'll get a warning from QProcess

M  +8    -0    processcore/plugins/network/network.cpp
M  +1    -0    processcore/plugins/network/network.h

https://invent.kde.org/plasma/libksysguard/-/commit/35fa15a5cf618776764e786242a67d73b8e3b33b