processcore: Ensure we properly terminate the network helper process on quit

Otherwise we'll get a warning from QProcess

BUG: 500384